[package]
name = "gfalace"
version = "0.1.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.11.3"
niffler = { version = "3.0.0", default-features = false, optional = false, features = ["bz2", "gz", "bgz", "zstd"] }
#niffler3 wants explicit compression backends
flate2 = { version = "1.0.35", default-features = false, features = ["zlib-ng"] }
bgzip = "0.3.1"
bzip2 = { version = "0.5.2", default-features = false, features = ["libbz2-rs-sys"] }
clap = { version = "4.5.34", features = ["derive"] }
handlegraph = { git = "https://github.com/chfi/rs-handlegraph", rev = "3ac575e4216ce16a16667503a8875e469a40a97a" }
gfa = "0.10.1"
bitvec = "1.0.1"
tempfile = "3.19.1"
rustc-hash = "2.1.1"
log = "0.4.27"
env_logger = "0.11.7"
rust-htslib = "0.49.0"
